Link bug update in Sponsor.

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,5 +2,5 @@
 
 github: [saswatsamal, sanketsanjeebpattanaik]
 
-custom: [https://rzp.io/l/CSE-B_Contribution]
+custom: ['https://rzp.io/l/CSE-B_Contribution']
 
